# pacdeplinearizer

./: CMakeLists.txt  README.md  depend.cpp
cmake_modules/: FindAlpm.cmake
